Changes to Version 2.0-26

    o Anova() F-tests for binomial and Poisson GLMs now changes error.estimate="dispersion" to "pearson" as advertized (bug reported by Will Petry).
    
    o Conforms to new CRAN requirements for package imports.

Changes to Version 2.0-25

    o Fixed df check in linearHypothesis.default() (bug report by Pierre Chausse).

    o Fixed bug when vcov. argument to Anova() is a function (reported by Liviu Andronic).
    
    o Now export .carEnv to avoid problem with update() in Boot() (reported by Alan T. Arnholt).

Changes to Version 2.0-24

    o Fixed broken URLs.

    o Changed handling of .carEnv environment.

    o Moved pbkrtest, quantreg, and mgcv from Suggests: to Imports:.

Changes to Version 2.0-23

    o Modified ScatterplotSmoothers to add an 'offset' to the vertical axis of spread smooths.  This is required in the marginal model plot functions.  

    o Fixed labels on mcPlot with overlay=FALSE

    o Check for 0 residual df and 0 residual deviance (within rounding) in Anova() and linearHypothesis() (problem reported by Jonathan Love).

    o Fixed model.matrix.lme and model.matrix.gls utility functions, and hence Anova and vif, respectively, to work with models specified with formulas supplied as objects (after problem noted by Gang Chen).

    o Added Wong data set, used in mixed-models appendix.

Changes to Version 2.0-22

    o corrected bug in 'terms' argument in residualPlots, and other graphic functions with a 'terms' argument

    o added residual curvature tests for glm.nb

    o mcPlot and mcPlots draw 'marginal/conditional' plots for lm objects.  The marginal plot is of the centered response versus a centered regressor; the conditional plot is the corresponding added-variable plot.  The plots can be overlaid or viewed side-by-side.
